--- a/app/build.gradle
+++ b/app/build.gradle
@@ -2,6 +2,7 @@ plugins {
     id 'com.android.application'
     id 'org.jetbrains.kotlin.android'
     id 'kotlin-kapt'
+    id 'dagger.hilt.android.plugin'
 }
 
 android {
@@ -52,6 +53,8 @@ dependencies {
     implementation 'com.google.firebase:firebase-firestore:24.1.1'
     implementation 'androidx.recyclerview:recyclerview:1.2.1'
 
+    implementation 'androidx.room:room-ktx:2.5.0-alpha01'
+
     /**
      *  Testing
      */
@@ -89,11 +92,10 @@ dependencies {
     implementation 'com.jakewharton.timber:timber:5.0.1'
 
     /**
-     *  Room
+     *  ROOM ORM
      */
-    def room_version = "2.4.2"
-    implementation "androidx.room:room-runtime:$room_version"
-    kapt "androidx.room:room-compiler:$room_version"
+    implementation "androidx.room:room-runtime:2.4.2"
+    kapt 'androidx.room:room-compiler:2.4.2'
 
     /**
      *  Dagger hilt
