--- a/app/build.gradle
+++ b/app/build.gradle
@@ -53,7 +53,6 @@ dependencies {
     implementation 'com.google.firebase:firebase-firestore:24.1.1'
     implementation 'androidx.recyclerview:recyclerview:1.2.1'
 
-    implementation 'androidx.room:room-ktx:2.5.0-alpha01'
 
     /**
      *  Testing
@@ -94,8 +93,13 @@ dependencies {
     /**
      *  ROOM ORM
      */
+    def roomVersion = "2.4.2"
     implementation "androidx.room:room-runtime:2.4.2"
     kapt 'androidx.room:room-compiler:2.4.2'
+//    annotationProcessor("androidx.room:room-compiler:$roomVersion")
+    implementation "androidx.room:room-ktx:$roomVersion"
+    // To use Kotlin annotation processing tool (kapt)
+    kapt("androidx.room:room-compiler:$roomVersion")
 
     /**
      *  Dagger hilt
