org.wordpress.aztec.AztecText added

--- a/settings.gradle
+++ b/settings.gradle
@@ -6,6 +6,7 @@ pluginManagement {
         google()
         mavenCentral()
         jcenter()
+        maven { url "https://a8c-libs.s3.amazonaws.com/android" }
     }
 }
 dependencyResolutionManagement {
@@ -14,6 +15,7 @@ dependencyResolutionManagement {
         google()
         mavenCentral()
         jcenter()
+        maven { url "https://a8c-libs.s3.amazonaws.com/android" }
     }
 }
 rootProject.name = "NoteApp"
