--- a/app/build.gradle
+++ b/app/build.gradle
@@ -120,4 +120,13 @@ dependencies {
     implementation "com.jakewharton.retrofit:retrofit2-kotlin-coroutines-adapter:0.9.2"
     implementation 'com.squareup.retrofit2:converter-gson:2.9.0'
     implementation 'com.squareup.okhttp3:logging-interceptor:5.0.0-alpha.2'
+
+
+    /**
+     * aztec
+     */
+    api "org.wordpress:aztec:v1.5.4"
+
+
+
 }
